--- a/CentralEcoCity/CentralEcoCity.csproj
+++ b/CentralEcoCity/CentralEcoCity.csproj
@@ -193,7 +193,7 @@
     <None Include="Resources\直播.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\双视大屏.png" />
+    <None Include="Resources\双视大屏.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
